--- a/Django_CRM/website/templates/website/base.html
+++ b/Django_CRM/website/templates/website/base.html
@@ -15,7 +15,7 @@
     {% if messages %}
         {% for message in messages %}
 
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <br/><div class="alert alert-warning alert-dismissible fade show" role="alert">
             {{ message }} <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
 
