--- a/Django_CRM/website/templates/website/home.html
+++ b/Django_CRM/website/templates/website/home.html
@@ -1,11 +1,44 @@
 {% extends 'website/base.html'%}
 
 {% block content %}
-<div class="col-md-6 offset-md-3">
-
     {% if user.is_authenticated %}
-        <h1>hello world</h1> 
+        <h1>Records</h1> 
+
+        <table class="table ">
+            <thead class="table-dark">
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Address</th>
+                <th scope="col">City</th>
+                <th scope="col">State</th>
+                <th scope="col">Zipcode</th>
+                <th scope="col">Created At</th>
+              </tr>
+            </thead>
+            <tbody class="table table-bordered table-hover table-striped-columns">
+                {% if records %}
+                {% for record in records %}
+                <tr>
+                        <td><a href="{% url 'detail' record.id %}"> {{record.id}} </a></td> 
+                        <td>{{record.first_name}}  {{record.last_name}}</td>
+                        <td>{{record.email}}</td>
+                        <td>{{record.phone}}</td>
+                        <td>{{record.address}}</td>
+                        <td>{{record.city}}</td>
+                        <td>{{record.state}}</td>
+                        <td>{{record.zipcode}}</td>
+                        <td>{{record.created_at}}</td>
+                </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
+      </table>
+
     {% else %}
+    <div class="col-md-6 offset-md-3">
         <h1>Login</h1><br/>
         <div class="container">
             <form method="POST" action="{% url 'home' %}">
@@ -19,6 +52,6 @@
                     <button type="submit" class="btn btn-secondary">Login</button>
             </form>
         </div>
+    </div>
     {% endif %}
-</div>
 {% endblock %}
