--- a/Django_CRM/website/templates/website/navbar.html
+++ b/Django_CRM/website/templates/website/navbar.html
@@ -9,6 +9,9 @@
 
             {% if user.is_authenticated %}
                 <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="{% url 'add' %}">Add</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="{% url 'logout' %}">Logout</a>
                 </li>
             {% else %}
